--- a/resources/js/pages/common-styles.scss
+++ b/resources/js/pages/common-styles.scss
@@ -35,7 +35,7 @@
       position: fixed;
       bottom: 6vh;
       right: 6vh;
-      z-index: 1000;
+      z-index: 2147483647;
     }
 
   }
